subindo algumas alteracoes

--- a/Contato.Application/Contato.Application.csproj
+++ b/Contato.Application/Contato.Application.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Contato.Domain\Contato.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Canais\Queries\GetCanaisListQuery\" />
+  </ItemGroup>
+
 </Project>
